# fastai-course

./: pyproject.toml
fastai_course/lesson02/: dog-vs-cat.ipynb  package-identifier.ipynb
fastai_course/lesson03/: 04_mnist_basics.ipynb
fastai_course/lesson06/: fruki_new_colab.xlsx  id3_decision_tree_algorithm.ipynb  names.xlsx  one_line.xlsx
fastai_course/lesson06/.ipynb_checkpoints/: test.py
