[tool.poetry]
name = "fastai-course"
version = "0.1.0"
description = ""
authors = ["diogojfr <diogojfr1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
gradio = "^5.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
